# valar-dagger

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codemeta.json  pyproject.toml  tox.ini
.github/workflows/: commit.yml  pull-test.yml  push-main.yml
docs/: conf.py  requirements.txt
tests/: __init__.py  test_watcher.py
valardagger/: __init__.py  backup.py  cli.py  context.py  toml.py  watcher.py
valardagger/resources/: valardagger.toml
